<resources>
    <string name="app_name">Project Tango Study</string>
    <string name="clear">Reset</string>
    <string name="cleared">All Cleared!</string>

    <string name="exception_tango_error">"Tango exception! Try again!"</string>
    <string name="exception_tango_invalid">"Tango invalid exception! Try again!"</string>
    <string name="exception_out_of_date">"Tango service outdated!"</string>
    <string name="exception_tango_permission">"Tango.PERMISSIONTYPE_DATASET required!"</string>
    <string name="exception_tango_service_disconnected">Tango service is reconnecting...</string>
    <string name="floor_changed_event">Floor is changed</string>
    <string name="calibrated">Calibrated!</string>
    <string name="save_adf">Save ADF</string>
    <string name="settings">Settings</string>
    <string name="distance_m">Distance (m):</string>
    <string name="avg_depth_m">Avg.Depth (m):</string>
    <string name="n_a">n/a</string>
    <string name="floor">Floor:</string>
    <string name="localized">Localized:</string>
    <string name="y">Y:</string>
    <string name="rt_height">RT-Height:</string>
    <string name="show_map">Show Map</string>
    <string name="rt_handh">RT-HandH:</string>
    <string name="rest2s">Rest2S:</string>
    <string name="maps">MapS:</string>
    <string name="adj_map">Adj. Map</string>

    <!-- ADFs -->
    <string-array name="set_dialog_menu_items_api_space">
        <item>Rename</item>
        <item>Delete from API space</item>
        <item>Export to App space</item>
    </string-array>
    <string-array name="set_dialog_menu_items_app_space">
        <item>Delete from  App space</item>
        <item>Import to API space</item>
    </string-array>

</resources>
